# tick_ticker

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/config/: constants.py  settings.py  underlyings.py  underlyings.yml
app/db/: client.py  optimizations.py
app/db/models/: __init__.py  option_contracts.py  options_ohlcv.py  options_snapshot.py  underlying_mapping.py
app/db/repository/: insert.py  query.py
app/docs/: common_knowledge.md  data_structure.md  operations.md
app/ingestion/: breeze_client.py  historical_loader.py  live_ingestion.py  transformer.py
app/services/: contract_service.py  symbol_service.py
app/utils/: datetime_utils.py  logger.py  retry.py
docs/: cash-sync.md  credentials.md  d1.md  storage.md
migrations/d1/: 001_market_data_sync_state.sql
notebooks/: getting_started.ipynb  options_analysis_sample.ipynb  r2_d1_connect.ipynb  r2_d1_connect.py
scripts/: run_historical.py  run_live.py
src/tick_ticker/: __init__.py  config.py
src/tick_ticker/db/: __init__.py
src/tick_ticker/db/models/: __init__.py  equity_symbol_reference.py  market_data_sync_state.py
src/tick_ticker/db/repositories/: __init__.py  equity_symbol_references.py  market_data_sync_state.py
src/tick_ticker/scripts/: __init__.py  sync_cash_data.py
src/tick_ticker/services/: __init__.py  cash_data.py  cash_history_provider.py  iceberg_catalog.py
src/tick_ticker/utils/: datetime.py  engines.py  logging.py  retry.py
tests/: test_cash_market_data.py  test_contract_service.py  test_credentials_access.py  test_iceberg_catalog.py  test_sync_cash_script.py  test_transformer.py  test_underlying_config.py
