[project]
name = "tick-ticker"
version = "0.1.0"
description = "Options data ingestion and analytics platform backed by ClickHouse"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "breeze-connect>=1.0.69",
    "clickhouse-connect>=0.8.15",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
options-platform = "app.main:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.3.4",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["data", "notebooks/getting_started.ipynb"]
