[project]
name = "tick-ticker"
version = "0.1.0"
description = "Market data sync scripts for Breeze, Cloudflare D1, and R2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "breeze-connect>=1.0.69",
    "httpx>=0.27.0",
    "pandas>=2.2.3",
    "pyarrow>=16.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "polars>=1.40.1",
    "pyiceberg>=0.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sync-cash-data = "tick_ticker.scripts.sync_cash_data:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.3.4",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tick_ticker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "credentials: live credential and service access checks",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["data", "notebooks/getting_started.ipynb"]
